@@ -142,10 +142,14 @@ abstract class ModulesHelper
 		$db		= JFactory::getDbo();
 		$query	= $db->getQuery(true);
 
-		$query->select('DISTINCT(m.module) AS value, e.name AS text');
-		$query->from('#__modules AS m');
-		$query->join('LEFT', '#__extensions AS e ON e.element=m.module');
-		$query->where('m.`client_id` = '.(int)$clientId);
+		$query->select('element AS value, name AS text');
+		$query->from('#__extensions as e');
+		$query->where('e.`client_id` = '.(int)$clientId);
+		$query->where('`type` = '.$db->quote('module'));
+		$query->where('`enabled` = 1');
+		$query->leftJoin('#__modules as m ON m.module=e.element AND m.client_id=e.client_id');
+		$query->where('m.module IS NOT NULL');
+		$query->group('element');		
 
 		$db->setQuery($query);
 		$modules = $db->loadObjectList();
