@@ -3,12 +3,12 @@
 ; Copyright (C) 2005 - 2011 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
-
 COM_INSTALLER="Installation Manager"
 COM_INSTALLER_AUTHOR_INFORMATION="Author Information"
 COM_INSTALLER_CONFIGURATION="Installer configuration"
 COM_INSTALLER_ENABLED_UPDATES_1=", 1 disabled site was enabled"
 COM_INSTALLER_ENABLED_UPDATES_MORE=", %s disabled sites were enabled"
+COM_INSTALLER_ERROR_DISABLE_DEFAULT_TEMPLATE_NOT_PERMITTED="Disable default template is not permitted"
 COM_INSTALLER_ERROR_METHOD="Method Not Implemented"
 COM_INSTALLER_ERROR_NO_EXTENSIONS_SELECTED="No extensions selected"
 COM_INSTALLER_EXTENSION_PUBLISHED="Extension successfully enabled."
