@@ -20,6 +20,7 @@ COM_TEMPLATES_ERROR_CANNOT_UNSET_DEFAULT_STYLE="Cannot unset default style"
 COM_TEMPLATES_ERROR_EDITOR_DISABLED="Either the CodeMirror or the None editor plug-in should be enabled to edit template files"
 COM_TEMPLATES_ERROR_EXTENSION_RECORD_NOT_FOUND="Extension record not found in database"
 COM_TEMPLATES_ERROR_FAILED_TO_SAVE_FILENAME="An error occurred. The file %s could not be saved."
+COM_TEMPLATES_ERROR_SAVE_DISABLED_TEMPLATE="Unable to save a style associated to a disabled template"
 COM_TEMPLATES_ERROR_SOURCE_FILE_NOT_FOUND="Source file not found"
 COM_TEMPLATES_ERROR_SOURCE_FILE_NOT_UNWRITABLE="Source file can't be returned to unwritable status"
 COM_TEMPLATES_ERROR_SOURCE_FILE_NOT_WRITABLE="Source file not writable"
